--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == README
 
-* Versión 0.6 Beta
+* Versión 0.6.1 Beta
 
 Aplicación web para el calculo de tuberías para actuadores o cilindros neumaticos.
 
@@ -21,7 +21,7 @@ Aplicación web para el calculo de tuberías para actuadores o cilindros neumati
 *Este trabajo ha sido desarrollado para la materia de Ingeniería de Software
 
 Se uso el lenguaje Ruby, que es interpretado y orientado a objetos.
-Se uso el framework (son como librerias) Rails, que esta hecho para crear aplicaciones web.
+Se uso el framework Rails, que esta hecho para crear aplicaciones web.
 Para la parte visual se utilizo el framework Bootstrap creado por Twitter, que nos ofrece botones, barras y estilos muy llamativos.
-La aplicación sigue el patrón modelo-vista-controlador. (osea que la los datos, la lógica y lo visual estan separados, para no hacer un revoltijo y trabajar mejor).
+La aplicación sigue el patrón modelo-vista-controlador. (datos, la lógica y visual estan separados, para no hacer un revoltijo y trabajar mejor).
 La aplicación se subío a los servidores de Heroku (es gratis para aplicaciones pequeñas) y así se puede ver desde internet.
